# xportrs

./: .editorconfig  .gitignore  .rustfmt.toml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bright-snacking-book.md  clippy.toml  codemeta.json
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  mdbook.yml  publish.yml
.serena/: project.yml
crates/cdisc-metadata/: Cargo.toml
crates/cdisc-metadata/data/adam/ig/v1.3/: DataStructures.csv  metadata.toml
crates/cdisc-metadata/data/sdtm/ig/v3.4/: Datasets.csv  Variables.csv  metadata.toml
crates/cdisc-metadata/data/send/ig/v3.1.1/: Variables.csv
crates/cdisc-metadata/src/: adam.rs  error.rs  lib.rs  loader.rs  sdtm.rs  send.rs  types.rs
crates/cdisc-metadata/tests/: data_validation.rs  errors.rs  loaders.rs  standard_methods.rs  types.rs
crates/xportts/: Cargo.toml  README.md
crates/xportts/src/: lib.rs
docs/: book.toml
docs/src/: 404.md  README.md  SUMMARY.md  introduction.md
docs/src/api/: dataset.md  format.md  metadata.md  reading.md  validation.md  writing.md
docs/src/architecture/: data-flow.md  overview.md  schema.md
docs/src/for_developers/: README.md
docs/src/format/: encoding.md  ibm-float.md  namestr.md  structure.md  timestamps.md
docs/src/guides/: fda-submission.md  quickstart.md  roundtrip.md  troubleshooting.md
docs/src/misc/: contributors.md
docs/src/reference/: changelog.md  glossary.md  sources.md
docs/src/regulatory/: cdisc.md  fda-guide.md  overview.md  validation.md  xpt-v5-spec.md  xpt-v8-spec.md
docs/theme/: glossary.css  head.hbs
examples/: README.md  custom_policy.rs  fda_compliance.rs  inspect.rs  polars_pipeline.rs  read_simple.rs  roundtrip.rs  spec_from_dataframe.rs  write_fda.rs  write_simple.rs
scripts/: sync-version.sh
src/: api.rs  config.rs  error.rs  lib.rs  polars.rs  report.rs  version.rs  write_plan.rs
src/agency/: mod.rs  rules.rs
src/api/: df_label.rs  metadata.rs  mod.rs  order.rs  pipeline.rs  read.rs  transforms.rs  validate.rs  write.rs
src/config/: mod.rs  types.rs
src/core/: mod.rs
src/core/float/: ibm.rs
src/core/header/: common.rs  datetime.rs  label.rs  library.rs  member.rs  mod.rs  namestr.rs
src/core/reader/: mod.rs  observation.rs  streaming.rs
src/core/writer/: builder.rs  mod.rs  observation.rs  streaming.rs
src/dataset/: domain_dataset.rs  format.rs  iter.rs  mod.rs  newtypes.rs
src/error/: mod.rs  report.rs  spec.rs  transform.rs  validation.rs
src/float/: ibm.rs  mod.rs
src/header/: datetime.rs  library.rs  member.rs  namestr.rs
src/io/: mod.rs  reader.rs  writer.rs
src/metadata/: dataset.rs  mod.rs  variable.rs
src/polars/: conversion.rs  metadata.rs  mod.rs  pipeline.rs  transforms.rs
src/policy/: agency.rs  custom.rs  fda.rs  mod.rs  nmpa.rs  pmda.rs  rules.rs
src/profile/: mod.rs  presets.rs  rules.rs
src/reader/: mod.rs  observation.rs  streaming.rs
src/schema/: derive.rs  mod.rs  plan.rs
src/spec/: builder.rs  dataset.rs  mapping.rs  mod.rs  source.rs  variable.rs
src/transform/: apply_df_label.rs  apply_format.rs  apply_label.rs  apply_length.rs  apply_order.rs  coerce_type.rs  config.rs  mod.rs  pipeline.rs  report.rs
src/types/: column.rs  dataset.rs  format.rs  missing.rs  mod.rs  observation.rs  options.rs  value.rs  version.rs
src/validate/: checks_profile.rs  checks_v5.rs  issues.rs  mod.rs
src/validation/: context.rs  mod.rs  severity.rs
src/validation/rules/: dataset.rs  fda.rs  format.rs  label.rs  mod.rs  name.rs  spec_conformance.rs  structure.rs  value.rs
src/writer/: builder.rs  mod.rs  observation.rs  streaming.rs
src/xpt/: mod.rs  version.rs
src/xpt/v5/: constants.rs  mod.rs  namestr.rs  record.rs  timestamp.rs
src/xpt/v5/encoding/: ibm_float.rs  mod.rs  text.rs
src/xpt/v5/read/: mod.rs  obs.rs  parse.rs  reader.rs
src/xpt/v5/write/: mod.rs  size.rs  split.rs  writer.rs
src/xpt/v8/: README.md  mod.rs
tests/: api_guidelines.rs  integration.rs  roundtrip.rs  v5.rs  v8.rs
tests/data/adam/ig/v1.3/: Variables.csv
tests/data/send/ig/v3.1.1/: Datasets.csv  metadata.toml
tests/v5/: byte_layout.rs  read.rs  write.rs
tests/v8/: placeholder.rs
