[package]
name = "xportrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "CDISC-compliant XPT file generation and parsing library for Rust"
readme = "README.md"
repository = "https://github.com/rubentalstra/xportrs"
documentation = "https://docs.rs/xportrs"
keywords = ["sas", "xpt", "xport", "cdisc", "clinical-trials"]
categories = ["encoding", "parser-implementations", "science"]

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
tracing = ["dep:tracing"]
full = ["serde", "tracing"]

[dependencies]
# Required - Error handling (industry standard for libraries)
thiserror = "2.0.17"

# Required - Date/time handling for XPT timestamps
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }

# Required - DataFrame integration
polars = { version = "0.51", features = ["lazy", "strings"] }

# Optional - Serialization
serde = { version = "1.0", features = ["derive"], optional = true }

# Optional - Structured logging
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
# Safety
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Correctness
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Style
enum_glob_use = "warn"
wildcard_imports = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"
inefficient_to_string = "warn"

# Pedantic (selective)
# TODO: Fix documentation issues incrementally (suppressed for alpha)
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "warn"
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
match_same_arms = "warn"

# Restrictions (be selective)
# Allow print in examples/tests, but warn in library code
# Note: These trigger on examples and tests which is too strict
# print_stdout = "warn"
# print_stderr = "warn"
dbg_macro = "warn"
