[package]
name = "xportrs"
version = "0.0.4"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "CDISC-compliant XPT file generation and parsing library for Rust"
readme = "README.md"
repository = "https://github.com/rubentalstra/xportrs"
documentation = "https://docs.rs/xportrs"
keywords = ["sas", "xpt", "xport", "cdisc", "clinical-trials"]
categories = ["encoding", "parser-implementations", "science"]

[features]
default = []
serde = ["dep:serde", "chrono/serde"]
tracing = ["dep:tracing"]
polars = ["dep:polars"]
full = ["serde", "tracing", "polars"]

[dependencies]
# Required - Error handling (industry standard for libraries)
thiserror = "2.0.17"

# Required - Date/time handling for XPT timestamps and SAS epoch conversions
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }

# Required - Binary packing with explicit endianness (safe, no-std compatible)
byteorder = "1.5"

# Required - Pattern matching for compliance profile rules
regex = "1.12.2"

# Optional - Serialization
serde = { version = "1.0", features = ["derive"], optional = true }

# Optional - Structured logging
tracing = { version = "0.1.44", optional = true }

# Optional - Polars DataFrame integration
polars = { version = "0.51", optional = true, default-features = false, features = ["lazy"] }

[dev-dependencies]
tempfile = "3"
cdisc-metadata = { path = "crates/cdisc-metadata" }

[lints.rust]
# Safety - forbid unsafe code (non-negotiable per architecture)
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Correctness
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Style
enum_glob_use = "warn"
wildcard_imports = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
redundant_closure_for_method_calls = "warn"
inefficient_to_string = "warn"

# Pedantic (selective)
# Documentation quality
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
match_same_arms = "warn"

# Restrictions (be selective)
# Allow print in examples/tests, but warn in library code
# Note: These trigger on examples and tests which is too strict
# print_stdout = "warn"
# print_stderr = "warn"
dbg_macro = "warn"
